[package]
name = "libtelnet-rs"
description = "libtelnet-inspired telnet parser for rust."
version = "1.1.2"
authors = ["envis10n <envis10n@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/envis10n/libtelnet-rs"
repository = "https://github.com/envis10n/libtelnet-rs"
documentation = "https://docs.rs/libtelnet-rs"
license = "MIT"
keywords = ["telnet", "libtelnet", "mud"]
categories = ["network-programming"]
exclude = ["docs/**", ".github/**"]

[features]
channels = ["crossbeam"]

[dependencies]
crossbeam = { version = "0.8", optional = true }
